--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -1,6 +1,8 @@
+<div class="replay rr-block">
 <p>
-    <button (click)="gotoReplay()">回放</button>
+    <button  (click)="gotoReplay()">回放</button>
 </p>
+</div>
 <p>开始写代码吧</p>
 
 <div>
